[gd_scene load_steps=10 format=2]

[ext_resource path="res://Utilidades/Fuentes/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Objetos/gem_small/frame_base.png" type="Texture" id=2]
[ext_resource path="res://Assets/Objetos/Contadores/Fondo.png" type="Texture" id=3]
[ext_resource path="res://Assets/Objetos/Contadores/key_A_gold_base.png" type="Texture" id=4]
[ext_resource path="res://Assets/Objetos/Contadores/key_A_silver_base.png" type="Texture" id=5]
[ext_resource path="res://Assets/Objetos/Contadores/key_A_red_base.png" type="Texture" id=6]
[ext_resource path="res://Escenas/Scripts/Contadores.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 10
extra_spacing_top = 4
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 1 )
Label/styles/normal = null

[node name="Contadores" type="Control"]
modulate = Color( 1, 1, 1, 0.666667 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Cont_Diamantes" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = 9.0
margin_right = -12.0
margin_bottom = 27.0
texture = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Cont_Diamantes"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -8.0
margin_right = -2.0
margin_bottom = 9.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Cont_Diamantes"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -9.0
margin_right = 11.0
margin_bottom = 9.0
theme = SubResource( 2 )
text = "10"
align = 2

[node name="Cont_Llaves" type="NinePatchRect" parent="."]
margin_left = 231.0
margin_top = 9.0
margin_right = 271.0
margin_bottom = 27.0
texture = ExtResource( 3 )

[node name="LlaveR" type="TextureRect" parent="Cont_Llaves"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 16.0
margin_bottom = 8.5
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 6 )

[node name="LlaveP" type="TextureRect" parent="Cont_Llaves"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -7.0
margin_right = 8.0
margin_bottom = 8.5
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 5 )

[node name="LlaveD" type="TextureRect" parent="Cont_Llaves"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -7.0
margin_bottom = 8.5
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 4 )
